# rcli

./: .gitignore  Cargo.toml  README.md  _typos.toml  cliff.toml  test.rest
fixture/: b64.txt  blake3.txt  ed25519.pk  ed25519.sk
src/: cli.rs  lib.rs  main.rs  opts.rs  process.rs
src/cli/: base64.rs  chacha20.rs  csv.rs  genpass.rs  http.rs  text.rs
src/process/: b64.rs  chacha20.rs  csv_convert.rs  gen_pass.rs  http.rs  text.rs
